nginx (1.4.5-2) UNRELEASED; urgency=medium

  [ Christos Trochalakis ]
  * debian/rules:
    + Avoid double declaration of hardening flags.
    + Expand buildflags so the build log is easier to follow.
    + Switch to --with--cc-opt, --with-ld-opt configure flags.
      Nginx is now compiled with --Werror, making all warnings
      into errors.
  * debian/patches/perl-use-dpkg-buildflags.patch:
    + Rewrite patch to just just override LDDLFLAGS and not
      CCFLAGS since this is handled by --with-cc-opt.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Tue, 18 Feb 2014 08:52:30 +0200

nginx (1.4.5-1) unstable; urgency=medium

  [ Christos Trochalakis ]
  * New upstream release.
  * debian/modules/nginx-lua:
    + Update nginx-lua to v0.9.4
  * debian/nginx-naxsi-ui.preinst:
    + Fix exit status issue (Closes: #735152)
  * debian/control:
    + Fix arch:all to arch:any dependencies
    + Make nginx depend on specific flavor version
  * debian/nginx-*.postinst:
    + Make nginx start by default (Closes: #735551)
  * debian/nginx-*.prerm:
    + No need to check for invoke-rc.d,
      correctly set the exit code on error
  * debian/nginx-common.nginx.init:
    + Rewrite some parts of the initscript
    + Introduce rotate command
    + Introduce upgrade command

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Thu, 13 Feb 2014 11:41:49 +0200

nginx (1.4.4-4) unstable; urgency=medium

  [ Christos Trochalakis ]
  * debian/nginx-common.postinst:
    + Fix log re-opening issue due to wrong /var/log/nginx
      permissions. (Closes: #734139)

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Sat, 04 Jan 2014 09:41:40 +0200

nginx (1.4.4-3) unstable; urgency=medium

  [ Christos Trochalakis ]
  * debian/nginx-naxsi-ui.postinst:
    + Fix early exit issue (Closes: #715435)

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Tue, 31 Dec 2013 11:47:07 +0200

nginx (1.4.4-2) unstable; urgency=low

  [ Michael Lustfield ]
  * debian/control: