@@ -31,6 +31,26 @@ else
 	NUMJOBS = 1
 endif
 
+# configure flags
+common_configure_flags := \
+			--with-cc-opt="$(debian_cflags)" \
+			--with-ld-opt="$(debian_ldflags)" \
+			--prefix=/usr/share/nginx \
+			--conf-path=/etc/nginx/nginx.conf \
+			--http-log-path=/var/log/nginx/access.log \
+			--error-log-path=/var/log/nginx/error.log \
+			--lock-path=/var/lock/nginx.lock \
+			--pid-path=/run/nginx.pid \
+			--http-client-body-temp-path=/var/lib/nginx/body \
+			--http-fastcgi-temp-path=/var/lib/nginx/fastcgi \
+			--http-proxy-temp-path=/var/lib/nginx/proxy \
+			--http-scgi-temp-path=/var/lib/nginx/scgi \
+			--http-uwsgi-temp-path=/var/lib/nginx/uwsgi \
+			--with-pcre-jit \
+			--with-ipv6 \
+			--with-http_ssl_module \
+			--with-http_stub_status_module \
+
 config.env.%:
 	dh_testdir
 	mkdir -p $(BUILDDIR_$*)
@@ -43,20 +63,7 @@ config.env.%:
 
 config.status.full: config.env.full
 	cd $(BUILDDIR_full) && ./configure  \
-	    --with-cc-opt="$(debian_cflags)" \
-	    --with-ld-opt="$(debian_ldflags)" \
-	    --prefix=/usr/share/nginx \
-	    --conf-path=/etc/nginx/nginx.conf \
-	    --error-log-path=/var/log/nginx/error.log \
-	    --http-client-body-temp-path=/var/lib/nginx/body \
-	    --http-fastcgi-temp-path=/var/lib/nginx/fastcgi \
-	    --http-log-path=/var/log/nginx/access.log \
-	    --http-proxy-temp-path=/var/lib/nginx/proxy \
-	    --http-scgi-temp-path=/var/lib/nginx/scgi \
-	    --http-uwsgi-temp-path=/var/lib/nginx/uwsgi \
-	    --lock-path=/var/lock/nginx.lock \
-	    --pid-path=/run/nginx.pid \
-	    --with-pcre-jit \
+	    $(common_configure_flags) \
 	    --with-debug \
 	    --with-http_addition_module \
 	    --with-http_dav_module \
@@ -65,11 +72,8 @@ config.status.full: config.env.full
 	    --with-http_image_filter_module \
 	    --with-http_realip_module \
 	    --with-http_spdy_module \
-	    --with-http_stub_status_module \
-	    --with-http_ssl_module \
 	    --with-http_sub_module \
 	    --with-http_xslt_module \
-	    --with-ipv6 \
 	    --with-mail \
 	    --with-mail_ssl_module \
 	    --add-module=$(MODULESDIR)/nginx-auth-pam \
@@ -77,26 +81,13 @@ config.status.full: config.env.full
 	    --add-module=$(MODULESDIR)/nginx-echo \
 	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
 	    --add-module=$(MODULESDIR)/ngx_http_substitutions_filter_module \
-            $(CONFIGURE_OPTS) >$@
+            >$@
 	touch $@
 
 config.status.light: config.env.light
 	cd $(BUILDDIR_light) && ./configure  \
-	    --with-cc-opt="$(debian_cflags)" \
-	    --with-ld-opt="$(debian_ldflags)" \
-	    --prefix=/usr/share/nginx \
-	    --conf-path=/etc/nginx/nginx.conf \
-	    --error-log-path=/var/log/nginx/error.log \
-	    --http-client-body-temp-path=/var/lib/nginx/body \
-	    --http-fastcgi-temp-path=/var/lib/nginx/fastcgi \
-	    --http-log-path=/var/log/nginx/access.log \
-	    --http-proxy-temp-path=/var/lib/nginx/proxy \
-	    --lock-path=/var/lock/nginx.lock \
-	    --pid-path=/run/nginx.pid \
-	    --with-pcre-jit \
+	    $(common_configure_flags) \
 	    --with-http_gzip_static_module \
-	    --with-http_ssl_module \
-	    --with-ipv6 \
 	    --without-http_browser_module \
 	    --without-http_geo_module \
 	    --without-http_limit_req_module \
@@ -105,30 +96,16 @@ config.status.light: config.env.light
 	    --without-http_referer_module \
 	    --without-http_scgi_module \
 	    --without-http_split_clients_module \
-	    --with-http_stub_status_module \
 	    --without-http_ssi_module \
 	    --without-http_userid_module \
 	    --without-http_uwsgi_module \
 	    --add-module=$(MODULESDIR)/nginx-echo \
-            $(CONFIGURE_OPTS) >$@
+            >$@
 	touch $@
 
 config.status.extras: config.env.extras
 	cd $(BUILDDIR_extras) && ./configure  \
-	    --with-cc-opt="$(debian_cflags)" \
-	    --with-ld-opt="$(debian_ldflags)" \
-	    --prefix=/usr/share/nginx \
-	    --conf-path=/etc/nginx/nginx.conf \
-	    --error-log-path=/var/log/nginx/error.log \
-	    --http-client-body-temp-path=/var/lib/nginx/body \
-	    --http-fastcgi-temp-path=/var/lib/nginx/fastcgi \
-	    --http-log-path=/var/log/nginx/access.log \
-	    --http-proxy-temp-path=/var/lib/nginx/proxy \
-	    --http-scgi-temp-path=/var/lib/nginx/scgi \
-	    --http-uwsgi-temp-path=/var/lib/nginx/uwsgi \
-	    --lock-path=/var/lock/nginx.lock \
-	    --pid-path=/run/nginx.pid \
-	    --with-pcre-jit \
+	    $(common_configure_flags) \
 	    --with-debug \
 	    --with-http_addition_module \
 	    --with-http_dav_module \
@@ -142,11 +119,8 @@ config.status.extras: config.env.extras
 	    --with-http_realip_module \
 	    --with-http_secure_link_module \
 	    --with-http_spdy_module \
-	    --with-http_stub_status_module \
-	    --with-http_ssl_module \
 	    --with-http_sub_module \
 	    --with-http_xslt_module \
-	    --with-ipv6 \
 	    --with-mail \
 	    --with-mail_ssl_module \
 	    --add-module=$(MODULESDIR)/headers-more-nginx-module \
@@ -161,38 +135,22 @@ config.status.extras: config.env.extras
 	    --add-module=$(MODULESDIR)/nginx-upload-progress \
 	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
 	    --add-module=$(MODULESDIR)/ngx_http_substitutions_filter_module \
-            $(CONFIGURE_OPTS) >$@
+            >$@
 	touch $@
 
 config.status.naxsi: config.env.naxsi
 	cd $(BUILDDIR_naxsi) && ./configure  \
-	    --with-cc-opt="$(debian_cflags)" \
-	    --with-ld-opt="$(debian_ldflags)" \
-	    --prefix=/usr/share/nginx \
-	    --conf-path=/etc/nginx/nginx.conf \
-	    --error-log-path=/var/log/nginx/error.log \
-	    --http-client-body-temp-path=/var/lib/nginx/body \
-	    --http-fastcgi-temp-path=/var/lib/nginx/fastcgi \
-	    --http-log-path=/var/log/nginx/access.log \
-	    --http-proxy-temp-path=/var/lib/nginx/proxy \
-	    --http-scgi-temp-path=/var/lib/nginx/scgi \
-	    --http-uwsgi-temp-path=/var/lib/nginx/uwsgi \
-	    --lock-path=/var/lock/nginx.lock \
-	    --pid-path=/run/nginx.pid \
-	    --with-pcre-jit \
-	    --with-http_ssl_module \
+	    $(common_configure_flags) \
 	    --without-mail_pop3_module \
 	    --without-mail_smtp_module \
 	    --without-mail_imap_module \
 	    --without-http_uwsgi_module \
 	    --without-http_scgi_module \
-	    --with-ipv6 \
-	    --with-http_stub_status_module \
 	    --with-http_realip_module \
 	    --add-module=$(MODULESDIR)/naxsi/naxsi_src \
 	    --add-module=$(MODULESDIR)/nginx-cache-purge \
 	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
-	    $(CONFIGURE_OPTS) >$@
+	    >$@
 	touch $@
 
 config.status.%:
