@@ -7,6 +7,7 @@ nginx (1.4.5-2) UNRELEASED; urgency=medium
     + Switch to --with--cc-opt, --with-ld-opt configure flags.
       Nginx is now compiled with --Werror, making all warnings
       into errors.
+    + Split common configure options.
   * debian/patches/perl-use-dpkg-buildflags.patch:
     + Rewrite patch to just just override LDDLFLAGS and not
       CCFLAGS since this is handled by --with-cc-opt.
